--- a/loginPage.html
+++ b/loginPage.html
@@ -13,6 +13,7 @@
   <main id="main-holder">
     <h1 id="login-header">Login</h1>
     
+    <p>Welcome!</p>
     <div id="login-error-msg-holder">
       <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
     </div>
