--- a/adminHome.html
+++ b/adminHome.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="login-page.css">
-  <script defer src="login-page.js"></script>
+  <title>Admin</title>
+  <link rel="stylesheet" href="admin.css">
+  <script defer src="admin.js"></script>
 </head>
 <body>
-  
+
 </body>
-</html>
+</html> 
