Updated file paths

--- a/index/adminHome.html
+++ b/index/adminHome.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin</title>
-  <link rel="stylesheet" href="admin.css">
-  <script defer src="admin.js"></script>
+  <link rel="stylesheet" href="../styles/admin.css">
+  <script defer src="../src/admin.js"></script>
 </head>
 <body>
 
