--- a/index/addReview.html
+++ b/index/addReview.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="citizen.css">
-  <script defer src="citizen.js"></script>
+  <link rel="stylesheet" href="../styles/explore-page.css">
+  <script defer src="../src/explore-page.js"></script>
 </head>
 <body>
   
