--- a/index/loginCitizen.html
+++ b/index/loginCitizen.html
@@ -148,7 +148,7 @@
 
 
     <!-- connect to js file -->
-    <script src="login.js"></script>
+    <script src="../src/login.js"></script>
    
 </body>
 </html>
