update file paths

--- a/index/loginPage.html
+++ b/index/loginPage.html
@@ -19,4 +19,7 @@
   </h2>
   <a href="./loginCitizen.html" target="_blank">Citizen</a>
   <a href="./loginAdmin.html" target="_blank">Admin</a>
-</
+</div>
+
+</body>
+</html>
