--- a/index/addReview.html
+++ b/index/addReview.html
@@ -8,3 +8,7 @@
   <link rel="stylesheet" href="../styles/explore-page.css">
   <script defer src="../src/explore-page.js"></script>
 </head>
+<body>
+  
+</body>
+</html> 
