--- a/index/loginPage.html
+++ b/index/loginPage.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>loginHome</title>
-  <link rel="stylesheet" href="login-page.css">
-  <script defer src="login-page.js"></script>
+  <link rel="stylesheet" href="../styles/login-page.css">
+  <script defer src="../src/login-page.js"></script>
 </head>
 <body>
   
@@ -17,9 +17,6 @@
   <h2 style="text-align: center; font-size: 40px;">
     Are you a...?
   </h2>
-  <a href="loginCitizen.html" target="_blank">Citizen</a>
-  <a href="loginAdmin.html" target="_blank">Admin</a>
-</div>
-
-</body>
-</html>
+  <a href="./loginCitizen.html" target="_blank">Citizen</a>
+  <a href="./loginAdmin.html" target="_blank">Admin</a>
+</
