--- a/index/loginAdmin.html
+++ b/index/loginAdmin.html
@@ -110,7 +110,7 @@
 
 
     <!-- connect to js file -->
-    <script src="../src/login.js"></script>
+    <script type="module" src="../src/login.js"></script>
 
 
 </body>
