added reports to data-accounts.js

--- a/index/adminHome.html
+++ b/index/adminHome.html
@@ -13,7 +13,10 @@
 
   <div class="container">
     <h2 class="section-title">Pending Reports</h2>
-    <div id="reportList"></div>
+    <div id="reportList">
+        
+
+    </div>
   </div>
 
   <script src="adminHome.js"></script>
