--- a/index/explore-page.html
+++ b/index/explore-page.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <button>Explore</button>
-    <button>My Reports</button>
+    <button onclick="location.href = '../index/userReviews.html';" >My Reports</button>
   </header>
   <div class="citizen-page-container">
     
