--- a/index/explore-page.html
+++ b/index/explore-page.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header>
-    <button>Explore</button>
-    <button onclick="location.href = '../index/userReviews.html';" >My Reports</button>
+    <button id = 'explore-btn'>Explore</button>
+    <button id = 'reports-btn' onclick="location.href = '../index/userReviews.html';" >My Reports</button>
   </header>
   <div class="citizen-page-container">
     
