--- a/index/explore-page.html
+++ b/index/explore-page.html
@@ -11,6 +11,7 @@
   <header>
     <button id = 'explore-btn'>Explore</button>
     <button id = 'reports-btn' onclick="location.href = '../index/userReviews.html';" >My Reports</button>
+    <button id = 'logout-btn' onclick="location.href = '../index/loginPage.html';" >Log Out</button>
   </header>
   <div class="citizen-page-container">
     
