--- a/index/explore-page.html
+++ b/index/explore-page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My Explore</title>
   <link rel="stylesheet" type="text/css" href="../styles/explore-page.css">
   <script type="module" src="../src/explore-page.js"></script>
 </head>
